# thread-scheduler-OS

./: CMakeCache.txt  CMakeLists.txt  README.md  With_Semaphores.cpp  With_mutex.cpp  analysis.cpp  analysis.h  ganttwidget.cpp  ganttwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  metrics.csv  mutex.cpp  plot_metrics.py  scheduler.cpp  scheduler.h  semaphores.cpp  semaphores_pre_emption.cpp  threadcontrol.cpp  threadcontrol.h  threaded_T_FCFS_log.txt  threaded_T_PRIORITY_log.txt  threaded_T_RR_log.txt  threadedscheduler.cpp  threadedscheduler.h  ucontext_stubs.h  ult_context.h  ult_sync.cpp  ult_sync.h
Reports/: basic_CFS_log  basic_EDF_log.txt  basic_FCFS_log.txt  basic_MLFQ_log.txt  basic_MLQ_log.txt  basic_PRIORITY_log.txt  basic_RR_log.txt  basic_SJF_log.txt  threaded_T_FCFS_log.txt  threaded_T_MLFQ_log.txt  threaded_T_PRIORITY_log.txt  threaded_T_RR_log.txt
cpp_scheduler/: scheduler.cpp
gui/: gui_main.py  scheduler_gui.py
random/: basic_CFS_log.txt  basic_EDF_log.txt  basic_FCFS_log.txt  basic_MLFQ_log.txt  basic_MLQ_log.txt  basic_PRIORITY_log.txt  basic_RR_log.txt  basic_SJF_log.txt
schedulers/: schedulers.py
